--- a/www/app/spots/spots-list-detail-modal.html
+++ b/www/app/spots/spots-list-detail-modal.html
@@ -1,7 +1,10 @@
 <ion-modal-view>
   <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
-    <button ng-click='vm.closeDetailModal()' class='button button-icon icon ion-arrow-left-c'></button>
     <h1 class='title'>Spots List Detail</h1>
+    <div class='buttons'>
+      <button class='icon ion-close-round close-modal-button'
+              ng-click='vm.detailModal.hide()'></button>
+    </div>
   </ion-header-bar>
   <ion-content class='has-header'>
     <ion-checkbox ng-model="vm.showDetail.tabs">Show Tabs with Data</ion-checkbox>
