--- a/www/app/spot/basic-form-modal.html
+++ b/www/app/spot/basic-form-modal.html
@@ -1,7 +1,7 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-stable nav-title-slide-ios7'>
-    <button class='button icon ion-arrow-left-c button-clear'
-            ng-click='vmChild.submit()'>
+  <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
+    <button class='button button-positive'
+            ng-click='vmChild.submit()'>Save
     </button>
     <h1 class='title'>{{ vmChild.modalTitle }}</h1>
     <div class='buttons'>
@@ -12,6 +12,9 @@
       <button class='button button-clear icon ion-compass'
               ng-click='vmChild.openCompass()'
               ng-show='vm.stateName === "app.spotTab.orientations"'></button>
+      <button class='icon ion-close-round close-modal-button'
+              ng-click='vmChild.basicFormModal.hide()'>
+      </button>
     </div>
   </ion-header-bar>
   <ion-content class='has-header'>
