--- a/www/app/spot/images/images-modal.html
+++ b/www/app/spot/images/images-modal.html
@@ -1,9 +1,15 @@
-<div class='modal image-modal'>
+<div class='modal image-modal' on-swipe-down='vmChild.closeModal("imageModal")'>
   <ion-slide-box on-slide-changed='slideChanged(index)' show-pager='true' active-slide='vmChild.activeSlide'>
     <ion-slide ng-repeat='image in vm.spot.properties.images'>
-      <img ng-src='{{ vmChild.getImageSrc(image.id) }}' class='fullscreen-image' ng-click='vmChild.closeModal("imageModal")'/>
-      <textarea rows='3' class='image-modal-textarea' ng-model='image.caption'
-                placeholder='Image description ...'></textarea>
+      <ion-scroll direction="xy" scrollbar-x="false" scrollbar-y="false" overflow-scroll="false"
+                  zooming="true" min-zoom="{{ vmChild.zoomMin }}" style="width: 100%; height: 100%"
+                  delegate-handle="scrollHandle{{ $index }}"
+                  on-scroll="vmChild.updateSlideStatus(vmChild.activeSlide)"
+                  on-release="vmChild.updateSlideStatus(vmChild.activeSlide)">
+        <img class='fullscreen-image' ng-src='{{ vmChild.getImageSrc(image.id) }}'></img>
+        <textarea rows='3' class='image-modal-textarea' ng-model='image.caption'
+                  placeholder='Image description ...'></textarea>
+      </ion-scroll>
     </ion-slide>
   </ion-slide-box>
 </div>
