fixed validation of basic form

--- a/www/app/form/auto-fields.template.html
+++ b/www/app/form/auto-fields.template.html
@@ -1,4 +1,4 @@
-<div ng-controller='FormController as form'>
+<div id='straboFormCtrlId' ng-controller='FormController as form'>
   <div ng-repeat='field in form.survey'
        class='strabo-form'>
     <div id='{{ field.name }}' ng-show='form.showField(field, vm.data)'>
