Confirm before updating Spot location to My Location

--- a/www/app/spot/spot-tab/spot-tab.directive.html
+++ b/www/app/spot/spot-tab/spot-tab.directive.html
@@ -12,7 +12,7 @@
   <div class='padding' ng-if='!vmChild.mapped'>
     This spot has not been mapped yet.
   </div>
-  <button ng-click='vmChild.getCurrentLocation();' ng-show='vmChild.showSetToMyLocation()'
+  <button ng-click='vmChild.setCurrentLocation();' ng-show='vmChild.showSetToMyLocation()'
           class='button button-clear button-positive'>
     <i class='icon ion-pinpoint'></i>
     <span class='button-text-small'>Set to My Location</span>
