added Next button to building relationship

--- a/www/app/relationship/select-relationship-types-modal.html
+++ b/www/app/relationship/select-relationship-types-modal.html
@@ -18,4 +18,11 @@
       <span class='button-text-big'>Add Other Relationship Type</span>
     </button>
   </ion-content>
+  <ion-footer-bar class='bar-stable nav-title-slide-ios7'>
+    <h1 class='title'></h1>
+    <button class='button icon-right ion-chevron-right button-clear'
+            ng-click='vm.closeModal("selectTypesModal"); vm.selectItem("b")'>
+      Next
+    </button>
+  </ion-footer-bar>
 </ion-modal-view>
