--- a/www/app/spots/spots.directive.html
+++ b/www/app/spots/spots.directive.html
@@ -12,36 +12,37 @@
   </div>
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='spot in vm.spotsDisplayed track by spot.properties.id'
-              ng-click='vm.goToSpot(spot.properties.id)'>
-      <img ng-if="spot.geometry.type === 'Point' && !spot.properties.image_basemap"
-           class='geometry-icon' src='img/point.png'>
-      <img ng-if="spot.geometry.type === 'LineString' && !spot.properties.image_basemap"
-           class='geometry-icon' src='img/line.png'>
-      <img ng-if="spot.geometry.type === 'Polygon' && !spot.properties.image_basemap"
-           class='geometry-icon' src='img/polygon.png'>
-      <img ng-if="spot.geometry.type === 'Point' && spot.properties.image_basemap"
-           class='geometry-icon' src='img/point-image-basemap.png'>
-      <img ng-if="spot.geometry.type === 'LineString' && spot.properties.image_basemap"
-           class='geometry-icon' src='img/line-image-basemap.png'>
-      <img ng-if="spot.geometry.type === 'Polygon' && spot.properties.image_basemap"
-           class='geometry-icon' src='img/polygon-image-basemap.png'>
-      <img ng-if="spot.geometry.type !== 'Point' && spot.geometry.type !== 'LineString' &&
-         spot.geometry.type !== 'Polygon'" class='geometry-icon' src='img/question.png'>
-      {{spot.properties.name}}
-      <span ng-show='vm.showDetail.tabs'>
-        <span ng-if='spot.properties.orientation_data' class='spot-tabs-on orientation-on'>Orientation</span>
-        <span ng-if='spot.properties._3d_structures' class='spot-tabs-on _3d-structures-on'>3D Structures</span>
-        <span ng-if='spot.properties.images' class='spot-tabs-on images-on'>Images</span>
-        <span ng-if='vm.hasTags(spot.properties.id)' class='spot-tabs-on tags-on'>Tags</span>
-        <span ng-if='spot.properties.samples' class='spot-tabs-on samples-on'>Samples</span>
-        <span ng-if='spot.properties.other_features' class='spot-tabs-on other-features-on'>Other Features</span>
-        <span ng-if='vm.hasRelationships(spot.properties.id)' class='spot-tabs-on relationships-on'>Relationships</span>
+              ng-repeat='spot in vm.spotsDisplayed track by spot.properties.id'>
+      <div ng-click='vm.goToSpot(spot.properties.id)'>
+        <img ng-if="spot.geometry.type === 'Point' && !spot.properties.image_basemap"
+             class='geometry-icon' src='img/point.png'>
+        <img ng-if="spot.geometry.type === 'LineString' && !spot.properties.image_basemap"
+             class='geometry-icon' src='img/line.png'>
+        <img ng-if="spot.geometry.type === 'Polygon' && !spot.properties.image_basemap"
+             class='geometry-icon' src='img/polygon.png'>
+        <img ng-if="spot.geometry.type === 'Point' && spot.properties.image_basemap"
+             class='geometry-icon' src='img/point-image-basemap.png'>
+        <img ng-if="spot.geometry.type === 'LineString' && spot.properties.image_basemap"
+             class='geometry-icon' src='img/line-image-basemap.png'>
+        <img ng-if="spot.geometry.type === 'Polygon' && spot.properties.image_basemap"
+             class='geometry-icon' src='img/polygon-image-basemap.png'>
+        <img ng-if="spot.geometry.type !== 'Point' && spot.geometry.type !== 'LineString' &&
+           spot.geometry.type !== 'Polygon'" class='geometry-icon' src='img/question.png'>
+        {{spot.properties.name}}
+        <span ng-show='vm.showDetail.tabs'>
+          <span ng-if='spot.properties.orientation_data' class='spot-tabs-on orientation-on'>Orientation</span>
+          <span ng-if='spot.properties._3d_structures' class='spot-tabs-on _3d-structures-on'>3D Structures</span>
+          <span ng-if='spot.properties.images' class='spot-tabs-on images-on'>Images</span>
+          <span ng-if='vm.hasTags(spot.properties.id)' class='spot-tabs-on tags-on'>Tags</span>
+          <span ng-if='spot.properties.samples' class='spot-tabs-on samples-on'>Samples</span>
+          <span ng-if='spot.properties.other_features' class='spot-tabs-on other-features-on'>Other Features</span>
+          <span ng-if='vm.hasRelationships(spot.properties.id)' class='spot-tabs-on relationships-on'>Relationships</span>
         </span>
-      <div ng-show='vm.showDetail.tags'>
-          <span ng-show='vm.hasTags(spot.properties.id)' class='list-sub'>
-            Tags: {{ vm.getTagNames(spot.properties.id) }}
-          </span>
+        <div ng-show='vm.showDetail.tags'>
+            <span ng-show='vm.hasTags(spot.properties.id)' class='list-sub'>
+              Tags: {{ vm.getTagNames(spot.properties.id) }}
+            </span>
+        </div>
       </div>
       <button class='button button-clear button-assertive'
               ng-click='vm.deleteSpot(spot)'>
