--- a/www/app/project/description/description.directive.html
+++ b/www/app/project/description/description.directive.html
@@ -17,9 +17,10 @@
   </button>
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='dailySetup in vm.data.daily_setup | orderBy: -date: true track by $index'
-              ng-click='vm.showDailySetupModal(dailySetup)'>
-      Log {{vm.data.daily_setup.length - $index}}: {{ dailySetup.date | date:'medium' }}
+              ng-repeat='dailySetup in vm.data.daily_setup | orderBy: -date: true track by $index'>
+      <div ng-click='vm.showDailySetupModal(dailySetup)'>
+        Log {{vm.data.daily_setup.length - $index}}: {{ dailySetup.date | date:'medium' }}
+      </div>
       <button class='button button-clear button-assertive'
               ng-click='vm.deleteDailySetup($index)'>
         <i class='icon ion-minus-circled'></i>
