--- a/www/app/project/manage/switch-project-modal.html
+++ b/www/app/project/manage/switch-project-modal.html
@@ -10,9 +10,10 @@
     <ion-content class='has-header'>
       <ion-list>
         <ion-item ng-repeat='project in vm.projects track by project.id'
-                  ng-click='vm.selectProject(project)'
                   class='item-button-right'>
-          {{ project.name || 'Unnamed' }}
+          <div ng-click='vm.selectProject(project)'>
+            {{ project.name || 'Unnamed' }}
+          </div>
           <button class='button button-clear button-assertive' ng-click='vm.deleteProject(project)'>
             <i class='icon ion-minus-circled'></i>
           </button>
