--- a/www/app/relationships/relationships.directive.html
+++ b/www/app/relationships/relationships.directive.html
@@ -7,9 +7,10 @@
   </div>
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='relationship in vm.relationships | orderBy:"name" track by relationship.id'
-              ng-click='vm.goToRelationship(relationship.id)'>
-      {{relationship.name}}
+              ng-repeat='relationship in vm.relationships | orderBy:"name" track by relationship.id'>
+      <div ng-click='vm.goToRelationship(relationship.id)'>
+        {{relationship.name}}
+      </div>
       <button class='button button-clear button-assertive'
               ng-click='vm.deleteRelationship(relationship)'>
         <i class='icon ion-minus-circled'></i>
