Added Strat Section for mobile

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -62,6 +62,9 @@
         <ion-item nav-clear menu-close href='#/app/image-basemaps'>
           Image Basemaps
         </ion-item>
+        <ion-item nav-clear menu-close href='#/app/strat-sections' ng-show='vm.getIsStratSectionMode()'>
+          Strat Sections
+        </ion-item>
         <ion-item nav-clear menu-close href='#/app/other-maps'>
           Other Basemaps
         </ion-item>
