--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,8 @@
     <script src="app/maps/map/map.controller.js"></script>
     <script src="app/maps/offline-maps/offline-map.controller.js"></script>
     <script src="app/maps/other-maps/other-maps.controller.js"></script>
+    <script src="app/maps/strat-section/strat-section.controller.js"></script>
+    <script src="app/maps/strat-sections/strat-sections.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
     <script src="app/misc/misc.controller.js"></script>
     <script src="app/project/description/description.controller.js"></script>
@@ -88,6 +90,8 @@
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
     <script src="app/spot/spot-tab/spot-tab.controller.js"></script>
+    <script src="app/spot/strat-interval/strat-interval-tab.controller.js"></script>
+    <script src="app/spot/strat-section/strat-section-tab.controller.js"></script>
     <script src="app/spot/tags/tags-tab.controller.js"></script>
 
     <!-- ng factories -->
@@ -104,6 +108,7 @@
     <script src="app/maps/other-maps/other-maps.factory.js"></script>
     <script src="app/maps/offline-maps/slippy-tile-names.factory.js"></script>
     <script src="app/maps/map/symbology.factory.js"></script>
+    <script src="app/maps/strat-section/strat-section.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
     <script src="app/shared/remote-server.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
@@ -133,6 +138,7 @@
     <script src="app/attributes/images/images.directive.js"></script>
     <script src="app/attributes/samples/samples.directive.js"></script>
     <script src="app/maps/image-basemaps/image-basemaps.directive.js"></script>
+    <script src="app/maps/strat-sections/strat-sections.directive.js"></script>
     <script src="app/maps/other-maps/other-maps.directive.js"></script>
     <script src="app/misc/misc.directive.js"></script>
     <script src="app/project/description/description.directive.js"></script>
@@ -147,6 +153,8 @@
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
     <script src="app/spot/spot-tab/spot-tab.directive.js"></script>
+    <script src="app/spot/strat-interval/strat-interval-tab.directive.js"></script>
+    <script src="app/spot/strat-section/strat-section-tab.directive.js"></script>
     <script src="app/spot/tabs/spot-tabs.directive.js"></script>
     <script src="app/spots/spots.directive.js"></script>
     <script src="app/spot/tags/tags-tab.directive.js"></script>
