added sed lithologies tab

--- a/www/app/maps/strat-section/strat-section.html
+++ b/www/app/maps/strat-section/strat-section.html
@@ -1,5 +1,5 @@
 <ion-view>
-  <ion-nav-title>{{ vm.thisSpotWithStratSection.properties.strat_section.label }}</ion-nav-title>
+  <ion-nav-title>{{ vm.thisSpotWithStratSection.properties.sed.strat_section.label }}</ion-nav-title>
   <ion-nav-buttons side='left'>
     <button ng-click='vm.goBack();' class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
