--- a/www/index.html
+++ b/www/index.html
@@ -138,6 +138,7 @@
     <script src="app/attributes/images/images.directive.js"></script>
     <script src="app/attributes/samples/samples.directive.js"></script>
     <script src="app/maps/image-basemaps/image-basemaps.directive.js"></script>
+    <script src="app/maps/strat-section/spots-this-map.directive.js"></script>
     <script src="app/maps/strat-sections/strat-sections.directive.js"></script>
     <script src="app/maps/other-maps/other-maps.directive.js"></script>
     <script src="app/misc/misc.directive.js"></script>
