--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -81,6 +81,8 @@
     <script src="app/maps/map/map.controller.js"></script>
     <script src="app/maps/offline-maps/offline-map.controller.js"></script>
     <script src="app/maps/other-maps/other-maps.controller.js"></script>
+    <script src="app/maps/strat-section/strat-section.controller.js"></script>
+    <script src="app/maps/strat-sections/strat-sections.controller.js"></script>
     <script src="app/menu/menu.controller.js"></script>
     <script src="app/misc/misc.controller.js"></script>
     <script src="app/project/description/description.controller.js"></script>
@@ -104,6 +106,8 @@
     <script src="app/spot/other-features/other-features-tab.controller.js"></script>
     <script src="app/spot/relationships/relationships-tab.controller.js"></script>
     <script src="app/spot/samples/samples-tab.controller.js"></script>
+    <script src="app/spot/sed/lithologies/lithologies-tab.controller.js"></script>
+    <script src="app/spot/sed/strat-section/strat-section-tab.controller.js"></script>
     <script src="app/spot/spot-tab/spot-tab.controller.js"></script>
     <script src="app/spot/tags/tags-tab.controller.js"></script>
 
@@ -121,6 +125,7 @@
     <script src="app/maps/other-maps/other-maps.factory.js"></script>
     <script src="app/maps/offline-maps/slippy-tile-names.factory.js"></script>
     <script src="app/maps/map/symbology.factory.js"></script>
+    <script src="app/maps/strat-section/strat-section.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
     <script src="app/shared/auto-login.factory.js"></script>
     <script src="app/shared/remote-server.factory.js"></script>
@@ -151,6 +156,8 @@
     <script src="app/attributes/images/images.directive.js"></script>
     <script src="app/attributes/samples/samples.directive.js"></script>
     <script src="app/maps/image-basemaps/image-basemaps.directive.js"></script>
+    <script src="app/maps/strat-section/spots-this-map.directive.js"></script>
+    <script src="app/maps/strat-sections/strat-sections.directive.js"></script>
     <script src="app/maps/other-maps/other-maps.directive.js"></script>
     <script src="app/misc/misc.directive.js"></script>
     <script src="app/project/description/description.directive.js"></script>
@@ -164,6 +171,8 @@
     <script src="app/spot/other-features/other-features-tab.directive.js"></script>
     <script src="app/spot/relationships/relationships-tab.directive.js"></script>
     <script src="app/spot/samples/samples-tab.directive.js"></script>
+    <script src="app/spot/sed/lithologies/lithologies-tab.directive.js"></script>
+    <script src="app/spot/sed/strat-section/strat-section-tab.directive.js"></script>
     <script src="app/spot/spot-tab/spot-tab.directive.js"></script>
     <script src="app/spot/tabs/spot-tabs.directive.js"></script>
     <script src="app/spots/spots.directive.js"></script>
