--- a/www/app/maps/strat-section/strat-section.web.html
+++ b/www/app/maps/strat-section/strat-section.web.html
@@ -1,8 +1,13 @@
-<div class="map">
+<div class='map' ng-show='vm.mapView'>
   <div id='mapdiv' data-tap-disabled='true'></div>
   <div class='saveEdits' ng-show='vm.showSaveEditsBtn' ng-click='vm.saveEdits()'>{{ vm.saveEditsText }}</div>
-  <div class='image-basemap-menu'>
+  <div class='map-menu'>
     <span ng-show='vm.isNesting' class='nesting-notification-web'>Nesting On</span>
+    <button class='button button-icon button-small ion-plus' ng-click='vm.addInterval()'></button>
+    <button ng-show='vm.mapView' ng-click='vm.switchView()'
+            class='button button-icon icon button-small ion-document-text'></button>
+    <button ng-show='!vm.mapView' ng-click='vm.switchView()'
+            class='button button-icon icon button-small ion-podium rotate-90'></button>
     <button ng-click='vm.popover.show($event)'
             class='button button-icon icon button-small ion-more rotate-90'></button>
   </div>
@@ -28,4 +33,22 @@
       });
     </script>
   </div>
+</div>
+<div ng-show='!vm.mapView'>
+  <div class='strabo-subheader  padding-left '>
+    <div class="strabo-subheader-text subheader-left">
+      {{ vm.thisSpotWithStratSection.properties.sed.strat_section.label }} Related Spots
+    </div>
+    <div class="subheader-right padding-top">
+      <span ng-show='vm.isNesting' class='nesting-notification-web'>Nesting On</span>
+      <button class='button button-icon button-small ion-plus' ng-click='vm.addInterval()'></button>
+      <button ng-show='vm.mapView' ng-click='vm.switchView()'
+              class='button button-icon icon button-small ion-document-text'></button>
+      <button ng-show='!vm.mapView' ng-click='vm.switchView()'
+              class='button button-icon icon button-small ion-podium rotate-90'></button>
+      <button ng-click='vm.popover.show($event)'
+              class='button button-icon icon button-small ion-more rotate-90'></button>
+    </div>
+  </div>
+  <spots-this-map-directive></spots-this-map-directive>
 </div>
