--- a/www/app/spot/sed/strat-section/strat-section-tab.directive.html
+++ b/www/app/spot/sed/strat-section/strat-section-tab.directive.html
@@ -20,6 +20,16 @@
         <option value=''>-- Select Column Profile --</option>
       </select>
     </ion-input>
+    <ion-input class="item item-input item-select item-stacked-label item-text-wrap">
+      <ion-label>Column Y-Axis Units</ion-label>
+      <select ng-model='vm.spot.properties.sed.strat_section.column_y_axis_units'>
+        <option value='cm'>cm</option>
+        <option value='m'>m</option>
+        <option value='in'>in</option>
+        <option value='ft'>ft</option>
+        <option value=''>-- Select Column Y-Axis Units --</option>
+      </select>
+    </ion-input>
     <button ng-click='vmChild.viewStratSection()'
             class='button button-clear button-positive'>
       <i class='button button-icon icon button-clear button-positive ion-podium rotate-90'></i>
