sed - split lithologies into 4 forms

--- a/www/app/maps/strat-section/spots-this-map.html
+++ b/www/app/maps/strat-section/spots-this-map.html
@@ -1,6 +1,6 @@
 <div>
   <div class='item item-divider'>
-    Spot with this Section
+    Location with this Section
   </div>
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'>
