--- a/www/app/spot/sed/lithologies/lithologies-tab.directive.html
+++ b/www/app/spot/sed/lithologies/lithologies-tab.directive.html
@@ -1,3 +1,11 @@
-<div class='strabo-form'>
-  <auto-fields/>
+<div>
+  <div class='button-bar'>
+    <button class='button' ng-click='vmChild.switchLithologyForm("interval_basics")'>Basics</button>
+    <button class='button' ng-click='vmChild.switchLithologyForm("stratification")'>Stratification</button>
+    <button class='button' ng-click='vmChild.switchLithologyForm("texture")'>Texture</button>
+    <button class='button' ng-click='vmChild.switchLithologyForm("composition")'>Composition</button>
+  </div>
+  <div class='strabo-form'>
+    <auto-fields/>
+  </div>
 </div>
