--- a/www/index.html
+++ b/www/index.html
@@ -158,6 +158,7 @@
     <script src="app/spot/spot-tab/spot-tab.directive.js"></script>
     <script src="app/spot/tabs/spot-tabs.directive.js"></script>
     <script src="app/spots/spots.directive.js"></script>
+    <script src="app/spots/spots-list.directive.js"></script>
     <script src="app/spot/tags/tags-tab.directive.js"></script>
     <script src="app/relationship/relationship.directive.js"></script>
     <script src="app/relationships/relationships.directive.js"></script>
