sed - updated lithologies

--- a/www/app/spot/sed/lithologies/lithologies-tab.directive.html
+++ b/www/app/spot/sed/lithologies/lithologies-tab.directive.html
@@ -5,7 +5,7 @@
     <button class='button' ng-click='vmChild.switchLithologyForm("texture")'>Texture</button>
     <button class='button' ng-click='vmChild.switchLithologyForm("composition")'>Composition</button>
   </div>
-  <div class='strabo-form'>
+  <form name='straboForm' novalidate=''>
     <auto-fields/>
-  </div>
+  </form>
 </div>
