--- a/www/app/maps/strat-section/add-interval-modal.html
+++ b/www/app/maps/strat-section/add-interval-modal.html
@@ -5,7 +5,7 @@
     </button>
     <h1 class='title'>Add Strat Interval</h1>
     <button class='button icon ion-close-round close-modal-button'
-            ng-click='vm.addIntervalModal.hide()'>
+            ng-click='vm.addIntervalModal.remove()'>
     </button>
   </ion-header-bar>
   <ion-content class='has-header strabo-form'>
