--- a/www/app/maps/strat-section/strat-section-popover.html
+++ b/www/app/maps/strat-section/strat-section-popover.html
@@ -1,10 +1,13 @@
 <ion-popover-view class='fit'>
   <ion-content scroll='false'>
     <ion-list>
+      <ion-item ng-click='vm.goToSpot(vm.thisSpotWithStratSection.properties.id, "strat-section")'>
+        <i class="icon ion-gear-b"></i> Strat Section Settings
+      </ion-item>
       <ion-item ng-click='vm.zoomToSpotsExtent()'>
         <i class="icon ion-map"></i> Zoom to Extent of Spots
       </ion-item>
-      <ion-item ng-click='vm.groupSpots()'>
+      <!--<ion-item ng-click='vm.groupSpots()'>
         <i class="icon ion-pricetags"></i> Add Tag(s) to Spot(s)
       </ion-item>
       <ion-item ng-show='vm.isiOS()' ng-click='vm.stereonetSpots()'>
@@ -18,7 +21,7 @@
       </ion-item>
       <ion-item ng-show='vm.hasLinkedImages()' ng-click='vm.unlinkImages()'>
         <i class="icon ion-link"></i> Unlink Images
-      </ion-item>
+      </ion-item>-->
     </ion-list>
   </ion-content>
 </ion-popover-view>
